# magi

./: .env.example  .gitignore  CLAUDE.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: test.yml
.omc/: project-memory.json
.omc/plans/: approval-cli-native-v3.md  approval-cli-native-v4.md  approval-cli-native-v5.md  approval-cli-native-v6.md  approval-cli-native-v7.md  optimization-cli-native.md  ralplan-refine-v4.md  refine-mode-proposal-v2-review-round2-Codex.md  refine-mode-proposal-v2-review.md  refine-mode-proposal-v2.md  refine-mode-proposal-v3-review-round1-Codex.md  refine-mode-proposal-v3-review-round2-Codex.md  refine-mode-proposal-v3-review-round2.md  refine-mode-proposal-v3-review-round3-Codex.md  refine-mode-proposal-v3-review-round3.md  refine-mode-proposal-v3-review.md  refine-mode-proposal-v3.md  refine-mode-proposal-v3r3-review-prompt.md  refine-mode-proposal-v3r4-amendment.md  refine-mode-proposal-v3r4-review-prompt.md  refine-mode-proposal-v4.md  refine-mode-proposal.md  refine-mode-review-prompt.md  refine-mode-review-report-Codex.md  refine-mode-review-report-Gemini.md  refine-mode-review-report-v3-Gemini.md  refine-mode-review-report-v4-Gemini.md  refine-mode-review-report-v5-Gemini.md  single-source-mode.md  (+9 more)
experiments/: results-2026-03-28.txt  three_cobblers.py
magi/: __init__.py  cli.py
tests/: test_adaptive.py  test_analytics.py  test_cli_adapters.py  test_cli_node.py  test_critique.py  test_decision.py  test_diff.py  test_judge_agreement.py  test_presets.py  test_refine_integration.py  test_refine_unit.py  test_vote.py
(+55 files in other folders)
